--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,12 +28,13 @@
   },
   "rules": {
     "@typescript-eslint/ban-ts-comment": "off",
-    "plugin:react/jsx-runtime": "extends",
+    "plugin:react/jsx-runtime": "off",
     "react/jsx-props-no-spreading": "off",
     "react/no-danger": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/function-component-definition": "off",
+    "no-undef": "off",
     "no-nested-ternary": "off",
     "prettier/prettier": "error"
   }
 }
-
-
