--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "typescript": "^4.6.2"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
